# Vulkan-setup

./: .gitignore  README.md
Linux/: README.md  setup_sdk.sh
Linux/CMake/: CMakeLists.txt  build.sh
Linux/CMake/Dependencies/: GetRecentGLFW.sh
Windows/: README.md  setup_sdk.ps1
Windows/CMake/: CMakeLists.txt  build_VS2022.bat  main.cpp
Windows/CMake/Dependencies/: GetRecentGLFW.bat
Windows/VisualStudioSolution/: VulkanCppWindowedProgram1.sln
Windows/VisualStudioSolution/VulkanCppWindowedProgram1/: VulkanCppWindowedProgram1.vcxproj  main.cpp
